<resources>
    <string name="app_name">Nutritec</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Consumo diario</string>
    <string name="Recipe_fragment">Creación de recetas</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pass">Contraseña</string>
    <string name="email">Correo</string>
    <string name="login">Iniciar sesión</string>
    <string name="codigo">Código de barras del producto</string>
    <string name="iniciar">Iniciar</string>
    <string name="add_food">Añadir comida</string>
    <string name="add_recipe">Añadir receta</string>
    <string name="Productos">Productos</string>
    <string name="nut_info">Valores nutricionales</string>
    <string name="salir">Salir</string>
    <string name="confirmar_receta">Confirmar Receta</string>
    <string name="nombre_receta">Ingrese el nombre de la receta</string>
    <string name="confirmar_consumo">Registrar</string>
</resources>